# mocsarc-gui

./: .gitignore  Cargo.toml
games/BananaBomber-5/: listing.toml
releases/: releases.json
src/: download.rs  game_listing.rs  main.rs  selector.rs
src/selector/: executor.rs  mod.rs
