[package]
name = "rust-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.8.1"
lerp = "0.4.0"
toml = "0.5.9"
serde = "1.0.145"
curl = "0.4.44"
json = "0.12.4"
zip-extract = "0.1.1"
project-root = "0.2.2"